[tool.poetry]
version = "0.2.1"
name = "Arguebuf CLI"
description = ""
authors = ["Mirko Lenz <info@mirko-lenz.de>"]
license = "MIT"

[tool.poetry.scripts]
arguebuf = "arguebuf_cli.app:cli"

[tool.poetry.dependencies]
python = "^3.8"
deepl-pro = "^0.1.4"
arguebuf = "^0.3.0"
typer = "^0.3.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
