[tool.poetry]
name = "arguebuf-cli"
version = "0.3.0"
description = ""
authors = ["Mirko Lenz <info@mirko-lenz.de>"]
license = "MIT"
readme = "README.md"
homepage = "https://recap.uni-trier.de"
repository = "https://github.com/recap-utr/arguebuf-cli"

[tool.poetry.scripts]
arguebuf = "arguebuf_cli.app:cli"

[tool.poetry.dependencies]
python = "^3.8"
deepl-pro = "^0.1.4"
arguebuf = "^0.3.0"
typer = "^0.3.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
