[tool.poetry]
name = "arguebuf-cli"
version = "1.2.0"
description = "Command line interface for interacting with argument graphs."
authors = ["Mirko Lenz <info@mirko-lenz.de>"]
license = "MIT"
readme = "README.md"
homepage = "https://recap.uni-trier.de"
repository = "https://github.com/recap-utr/arguebuf-cli"

[tool.poetry.scripts]
arguebuf = "arguebuf_cli.app:cli"

[tool.poetry.dependencies]
python = "^3.8"
deepl-pro = "^0.1.4"
arguebuf = "^1.1.0"
typer = { version = "^0.6.1", extras = ["all"] }

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
